--- a/RTIMULib/CMakeLists.txt
+++ b/RTIMULib/CMakeLists.txt
@@ -72,6 +72,8 @@ SET(LIBRTIMU_SRCS
     IMUDrivers/RTHumidityHTS221.cpp
     IMUDrivers/RTHumidityHTU21D.cpp
     IMUDrivers/RTIMUHMC5883LADXL345.cpp
+    IMUDrivers/RTIMUFXOS8700FXAS21002C.cpp
+    IMUDrivers/RTIMULSM6DSOXLIS3MDL.cpp
 )
 
 IF(WIN32 AND QT5)
